testing/framework/resources/Advanced/Failing/mondrian/query5803.q
select time_by_day.the_year as c0, time_by_day.week_of_year as c1, time_by_day.day_of_month as c2, customer.customer_id as c3, sum(sales_fact_1997.unit_sales) as m0 from time_by_day as time_by_day, sales_fact_1997 as sales_fact_1997, customer as customer where sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and time_by_day.week_of_year = 48 and time_by_day.day_of_month in (17, 18, 19, 20) and sales_fact_1997.customer_id = customer.customer_id and customer.customer_id in (1304, 5826, 9169, 9929, 10068) group by time_by_day.the_year, time_by_day.week_of_year, time_by_day.day_of_month, customer.customer_id;
